@@ -2,8 +2,11 @@
 - Small changes to TwoFactors() so variable names get printed properly in tables.
 - added author credentials to OneFactor(), OnePredictor(), TwoFactors(), and UniDesc().
 - removed over-writing of files in example for TwoFactors(). Filenames will now indicate with or No interaction.
-- dotplots in TwoFactors() have mroe meaningful filenames that reflect grouping variable used.
+- dotplots in TwoFactors() have more meaningful filenames that reflect grouping variable used.
 - fixed creation of ReadMe.txt in the MyBrailleR folder so that it gets the package version properly. Needed to include packageVersion() in the NAMESPACE file; also explicitly linked this command to the utils package in SetupBrailleR().
+- added internal function .simpleCap() which is based on code in the example for toupper(); outcome is dependent on a new BrailleR option BrailleR.MakeUpper which is set to TRUE by default.
+- added function SetMakeUpper() to control the presentation of variable names on graphs.  
+
 
 # v0.23.7
 - WriteR() goes live. Does not make use of all arguments just yet.
